# open-retro-sight

./: .gitignore  CLAUDE.md  README.md  README_EN.md  README_ZH.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: index.md
docs/architecture/: algorithms.md  hardware-layer.md  overview.md  software-stack.md
docs/development/: api-reference.md  changelog.md  progress.md
docs/getting-started/: introduction.md
docs/roadmap/: challenges.md  commercialization.md  mvp-features.md  vision.md
docs/use-cases/: analog-gauge.md  digital-display.md  indicator-light.md  switch-knob.md
examples/: 01_basic_ocr.py  02_pointer_gauge.py  03_indicator_light.py  04_mqtt_output.py  05_modbus_server.py  06_full_pipeline.py  README.md
src/retrosight/: __init__.py
src/retrosight/capture/: __init__.py  camera.py
src/retrosight/output/: __init__.py  buffer.py  modbus.py  mqtt.py
src/retrosight/preprocessing/: __init__.py  enhancement.py  filter.py  transform.py
src/retrosight/recognition/: __init__.py  light.py  ocr.py  pointer.py  switch.py
src/retrosight/ui/: __init__.py  app.py
tests/: __init__.py  test_app.py  test_buffer.py  test_camera.py  test_enhancement.py  test_filter.py  test_light.py  test_modbus.py  test_mqtt.py  test_ocr.py  test_pointer.py  test_switch.py  test_transform.py
tests/integration/: conftest.py  test_capture_to_recognition.py  test_end_to_end.py  test_recognition_to_output.py
